Additions to the localisations for AST focus and opinion_modifiers

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -1,4 +1,4 @@
-#By Marmite and Iranian Maggot
+﻿#By Marmite and Iranian Maggot
 l_english:
  australia_focus: "Australia Focus Tree"
 #Decision
@@ -76,6 +76,10 @@ l_english:
  australia_md.17.o2: "Sweden for the win"
  australia_md.17.o3: "How else would the British keep their empire?"
  australia_md.17.o4: "German engineering is the best"
+ australia_md.24.t: "The Bali Bombings"
+ australia_md.24.d1: "At 11pm on the Indonesian island of Bali, three bombs were detonated. Two explosions rattled the tourist nightlife hotspot on Kuta Beach and a third blast occurred in front of the American consulate nearby. Nearly half the deaths were Australians, making up 88 of the 202 fatalities. This will be remembered as the day that terror darkened the hearts of Australians."
+ australia_md.24.d2: "At 11pm on the Indonesian island of Bali, three bombs were detonated. Two explosions rattled the tourist nightlife hotspot on Kuta Beach and a third blast occurred in front of the American consulate nearby. Nearly half the deaths were Australians, making up 88 of the 202 fatalities. In response, Prime Minister John Howard said, 'let us wrap our arms around, not only our fellow Australians, but our arms around the people of Indonesia.'"
+ australia_md.24.o1: "The Australian spirit has not been broken"
 
 #Tooltips
  CHI_influece_greater_influ_20_tt: "Our influence on Australia is greater than 20 (Current: [?THIS.AST_CHI_trade_influence])"
@@ -178,7 +182,7 @@ l_english:
  AST_decentralised_arms_desc: ""
  AST_military_self_sufficient: "Military Self Sufficiency"
  AST_military_self_sufficient_desc: ""
- AST_military_self_sufficient_expanded: "Military Sufficency Surplus" 
+ AST_military_self_sufficient_expanded: "Military Sufficency Surplus"
  AST_military_self_sufficient_expanded_desc: ""
  AST_military_self_sufficient_expanded1: "Military Production Powerhouse"
  AST_expanding_dockyards: "Expanding Australian Dockyards"
@@ -230,7 +234,7 @@ l_english:
  AST_green_subsidies_desc: ""
  AST_expadning_wind_farms: "Expanding Wind Farms"
  AST_expadning_wind_farms_desc: ""
- 
+
 
 
  #spelling mistakes below in focus/ideas names *union* *resistance* *treaty*- req to change both, leaving functional. moredps
@@ -287,7 +291,7 @@ l_english:
  AST_failed_naval_geopolitical_maneuvering_about_the_south_china_sea: "Unsuccessful Naval Geopolitical Maneuvering About the South China Sea"
  AST_failed_naval_geopolitical_maneuvering_about_the_south_china_sea_desc: "We have unsuccessfully attempted to assert our dominance in the South China Sea and China's fleets are now operating there."
 
- 
+
 
 
 #FOCUS - Political (WORK IN PROGRESS)
@@ -300,37 +304,35 @@ l_english:
  AST_Preparing_for_the_Election: "Preparing for the Election"
  AST_Preparing_for_the_Election_desc: "As the election drew nearer, excitement reached a fever pitch. The incumbent, boasting a track record of achievements, found themselves in a fierce competition with a range of challengers. The electorate was gripped by the suspense of the impending vote, with all eyes on the candidates, eager to see who would emerge victorious."
  AST_The_Labor_Party: "The Labor Party"
- AST_The_Labor_Party_desc: ""
+ AST_The_Labor_Party_desc: "The Australian Labor Party is the major center-left opposition party. The party balances progressive and centrist policies between its factions. The left faction is progressive and socially democratic, while the right faction is economically liberal and socially conservative."
  AST_Strengthen_the_Labor_right: "Strengthen the Labor Right"
- AST_Strengthen_the_Labor_right_desc: ""
- AST_Increase_the_power_of_the_Labor_left: "Increase the Power of the Labor Left"
- AST_Increase_the_power_of_the_Labor_left_desc: ""
+ AST_Strengthen_the_Labor_right_desc: "Labor's Right focuses on economic growth, fiscal responsibility and market-friendly policies. Their policies prioritise budget surplus and debt reduction with more cautious climate policy and a more restrictive approach to immigration and border security. They strongly support the US alliance and close ties to Western allies."
+ AST_Increase_the_power_of_the_Labor_left: "Increase the Power of the the Labor Left"
+ AST_Increase_the_power_of_the_Labor_left_desc: "Labor's Left is more progressive and social-democratic than the Right. The faction emphasises social justice, equality and the rights of marginalized groups. Their economic policy advocates for stronger government intervention to ensure fair distribution of wealth and resources. They support a more independent foreign policy that is less aligned with the United States."
  AST_influence_the_factions: "Influence the Factions"
  AST_influence_the_factions_desc: ""
  AST_Branch_Stacking: "Branch Stacking"
- AST_Branch_Stacking_desc: ""
+ AST_Branch_Stacking_desc: "To ensure the Labor Party's success in future elections, we should position loyal party members in branches where their votes can significantly impact the outcome of internal party elections in our favour. This will allow us to ensure that our preferred candidates are preselected for elections and ensure that our faction gains control over party decisions. The practice is considered unethical and risks increasing the country's political corruption."
  AST_Influence_the_Unions: "Influence the Unions"
- AST_Influence_the_Unions_desc: ""
+ AST_Influence_the_Unions_desc: "The Labor Party has a long history with Australia's labor unions. The unions have large numbers of members that could benefit our cause monetarily and politically. Supporting the unions gives us legitimacy as representatives of the working-class's interests."
  AST_Use_the_faceless_men: "Use the Faceless Men"
- AST_Use_the_faceless_men_desc: ""
- AST_Push_Social_issues_into_the_party_platform: ""
- AST_Push_Social_issues_into_the_party_platform_desc: ""
- AST_Expand_the_power_of_the_trade_unions_in_the_party: ""
- AST_Expand_the_power_of_the_trade_unions_in_the_party: ""
- AST_Expand_the_power_of_the_trade_unions_in_the_party: ""
- AST_Expand_the_power_of_the_trade_unions_in_the_party_desc: ""
- AST_Look_towards_Keynesianism: ""
- AST_Look_towards_Keynesianism_desc: ""
- AST_Push_for_slow_change_in_the_party: ""
- AST_Push_for_slow_change_in_the_party_desc: ""
- AST_Keep_with_the_Third_way: ""
- AST_Keep_with_the_Third_way_desc: ""
- AST_Continue_US_focused_foreign_policy: ""
- AST_Continue_US_focused_foreign_policy_desc: ""
- AST_Push_the_ideas_of_New_Leftism: ""
- AST_Push_the_ideas_of_New_Leftism_desc: ""
- AST_Bring_Tax_reform_to_the_table: ""
- AST_Bring_Tax_reform_to_the_table_desc: ""
+ AST_Use_the_faceless_men_desc: "Senior party officials, faction leaders and union bosses exert substantial control over the party's internal processes. These men and women can make backroom deals to influence key decisions that affect the party's direction and leadership without input from the general public."
+ AST_Push_Social_issues_into_the_party_platform: "Promote Social Issues"
+ AST_Push_Social_issues_into_the_party_platform_desc: "A key priority of Labor's Left is a progressive approach to social issues. The Labor Party should make social issues a major part of our platform."
+ AST_Expand_the_power_of_the_trade_unions_in_the_party: "Expand the Power of Trade Unions"
+ AST_Expand_the_power_of_the_trade_unions_in_the_party_desc: "Trade unions fight for worker's rights, fair wages, job security and better working conditions. Their interests align with our own and giving them more power in the party will make them more invested in our success. We may have to compromise on some issues to keep them on our side, and the public may develop a perception that our party is under their control."
+ AST_Look_towards_Keynesianism: "Look Towards Keynesianism"
+ AST_Look_towards_Keynesianism_desc: "Keynesianism is an economic philosophy that is focused on aggregate demand, the idea that total demand for goods and services is the primary driver of economic activity and employment levels. The philosophy advocates for active government intervention to keep the economy stable. Countercyclical spending is a core concept that encourages governments to spend more and lower taxes during the bad times, and the reverse during economic booms. Our government should look to Keynes's wisdom when considering macroeconomic policies."
+ AST_Push_for_slow_change_in_the_party: "Encourage A Conservative Approach"
+ AST_Push_for_slow_change_in_the_party_desc: "While Labor is a left leaning party, we should take a slower approach to our social policies to avoid alienating potential voters. The Labor Party should support traditional family values and take a controlled approach to issues like immigration and border security. Centrist social policies will be more palatable to more voters."
+ AST_Keep_with_the_Third_way: "Keep with the Third Way"
+ AST_Keep_with_the_Third_way_desc: "Traditional socialism and laissez-faire capitalism have too many flaws to be effective in the modern day. The Third Way is an attempt to reconcile right and left-wing policies in the social, economic and welfare spheres of government. We will focus on pragmatic, evidence-based policymaking rather than ideological purity."
+ AST_Continue_US_focused_foreign_policy: "US Foreign Policy Alignment"
+ AST_Continue_US_focused_foreign_policy_desc: "The US's success is our success. We should continue to align our foreign policy with that of the United States to ensure our security and prosperity."
+ AST_Push_the_ideas_of_New_Leftism: "The Ideas of New Leftism"
+ AST_Push_the_ideas_of_New_Leftism_desc: "The New Left is a political movement that attempts to put a greater focus on civil rights, environmentalism and cultural liberation, areas often neglected by the Old Left. The Labor Party will push for racial and gender equality, environmental protection and anti-imperialism. We should be wary of capitalism and decentralise political power to give communities more control over their own affairs."
+ AST_Bring_Tax_reform_to_the_table: "Put Tax Reform on the Table"
+ AST_Bring_Tax_reform_to_the_table_desc: "Increase taxes for the wealthy, tax cuts for the poor. A man only needs so much wealth before it becomes significant excess. Low-income workers keep the country running, and we should minimise the economic burden they carry. We can put this money to good use in education and healthcare."
  AST_Sway_support_from_the_unions: ""
  AST_Sway_support_from_the_unions_desc: ""
  AST_Keep_with_economic_rationalism: ""
@@ -593,12 +595,12 @@ l_english:
  AST_Redefine_the_land_laws_desc: ""
  AST_New_Developments: ""
  AST_New_Developments_desc: ""
- 
+
  AST_expand_australian_industry: ""
  AST_expand_australian_industry_desc: ""
- 
- 
- 
+
+
+
  AST_ImportOil_amp_Gas: ""
  AST_ImportOil_amp_Gas_desc: ""
 
@@ -607,27 +609,27 @@ l_english:
  AST_China: ""
  AST_China_desc: ""
 
- 
 
- 
- 
 
- 
- 
- 
+
+
+
+
+
+
  AST_CST_Power_Plants: ""
  AST_CST_Power_Plants_desc: ""
- 
+
  AST_Tidal_generators: ""
  AST_Tidal_generators_desc: ""
  AST_OffshoreWind_Farms: ""
  AST_OffshoreWind_Farms_desc: ""
 
- 
- 
 
 
- 
+
+
+
  AST_save_australian_industry: ""
  AST_save_australian_industry_desc: ""
 
@@ -641,12 +643,12 @@ l_english:
  AST_Expand_the_Osborne_Shipyards_desc: ""
  AST_Improved_Australian_Home_of_Shipbuilding: ""
  AST_Improved_Australian_Home_of_Shipbuilding_desc: ""
- 
 
 
 
 
- 
+
+
  AST_Import_Arms_Deals: ""
  AST_Import_Arms_Deals_desc: ""
  AST_australian_foreign_affairs: ""
