--- a/localisation/english/MD_opinion_modifiers_l_english.yml
+++ b/localisation/english/MD_opinion_modifiers_l_english.yml
@@ -492,3 +492,14 @@
  SIN_anti_f1_sentiment: "Barred the Grand Prix"
 
  falkland_conflict_argentina: "Falkland Conflict"
+
+#Australia
+ france_lightly_offended_by_recent_actions: "Lightly Offended by Recent Actions"
+ france_lightly_offended_by_recent_actions2: "Lightly Offended by Recent Actions"
+ ditched_france: "Ditched France"
+ ditched_france2: "Ditched France"
+ france_feeling_good_about_future_business_cooperations: "Feeling Good About Future Business Cooperations"
+ france_feeling_good_about_future_business_cooperations2: "Feeling Good About Future Business Cooperations"
+ cooperation_with_rheinmetall: "Cooperation with Rheinmetall"
+ afghanistan_trade: "Afghanistan Trade"
+ australia_indonesia_bali_trauma: "Bali Shared Trauma"
