--- a/localisation/english/MD_money_l_english.yml
+++ b/localisation/english/MD_money_l_english.yml
@@ -214,7 +214,7 @@
 
  # Total GDP Marks
 
- 7_total_gdp_tt: "More than $$§Y7§!k Total GDP (Current: $$§Y[?ROOT.gdp_total]§!b)"
+ 7_total_gdp_tt: "More than $$§Y7000§!b Total GDP (Current: $$§Y[?ROOT.gdp_total]§!b)"
 
  ##Tooltips for additional incomes and expenses
  mnt_yacht_income_tt: "$$[?additional_income_mnt_yacht|+3] from §Y$MNT_yacht$§!\n"
