Bugfixes to Libyan tree

--- a/localisation/english/MD_opinion_modifiers_l_english.yml
+++ b/localisation/english/MD_opinion_modifiers_l_english.yml
@@ -379,6 +379,7 @@
  major_arab_oil_importer: "Major Arab Oil Importer"
  american_japanese_imports: "American-Japanese Imports"
  recently_invest: "Recently Invested in Us"
+ harshly_worded_letter: "Harshly Worded Letter"
 
  #Russian Opinions
  SOV_introduced_sanctions_dialogue: "Opened Sanctions Dialogue"
