--- a/localisation/english/MD_traits_l_english.yml
+++ b/localisation/english/MD_traits_l_english.yml
@@ -235,6 +235,7 @@
  CAT_lpd_research: "Amphibious Transport Dock Ships (LPD) Research Speed"
  internet_tech_research: "All Internet Technology Research Speed"
  Cat_FUEL_OIL_research: "Fuel & Oil Processing Techs Research Speed"
+ CAT_genes_research: "Genetic Engineering Research Speed"
  Cat_missile_research: "All Missiles Research Speed"
  Cat_BM_research: "Ballistic Missiles Research Speed"
  Cat_ICBM_research: "Intercontinental Ballistic Missiles Research Speed"
@@ -252,6 +253,7 @@
  Cat_GNSS_research: "GNSS Satellites Research Speed"
  Cat_conventional_warhead_research: "Conventional Warheads Research Speed"
  Cat_nuclear_weapons_research: "Nuclear Weapons Research Speed"
+ Cat_nuclear_reactors_research: "Nuclear Reactors Research Speed"
  CAT_avionics_research: "Air Avionics Research Speed"
  CAT_drones_research: "Air Drones Research Speed"
  CAT_wings_research: "Aircraft Wings Research Speed"
