--- a/localisation/english/MD_money_l_english.yml
+++ b/localisation/english/MD_money_l_english.yml
@@ -205,7 +205,7 @@
  7_per_capita_or_more_tt: "More than $$§Y7§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
  8_per_capita_or_more_tt: "More than $$§Y8§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
  9_per_capita_or_more_tt: "More than $$§Y9k§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
- 10_per_capita_or_more_tt: "More than $$§Y10k§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 10_per_capita_or_more_tt: "More than $$§Y10§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
  15_per_capita_or_more_tt: "More than $$§Y15§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
  20_per_capita_or_more_tt: "More than $$§Y20§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
  25_per_capita_or_more_tt: "More than $$§Y25§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
