Triad decision category working part 1

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -115,7 +115,7 @@
  
  #Economy
  HKG_under_lion_rock_hill: "Below the Lion Rock"
- HKG_under_lion_rock_hill_desc: "Below the Lion Rock, Hong Kong, which has just experienced the financial turmoil and entered the millennium, is facing many social problems. How to solve them, is left to the judgement of you."
+ HKG_under_lion_rock_hill_desc: "Below the Lion Rock, Hong Kong, where has just experienced the financial turmoil and entered the new millennium, is facing many social problems. How to solve them, is left to the judgement of people."
  HKG_race_discrimination_bill: "Race Discrimination Bill"
  HKG_race_discrimination_bill_desc: "The Basic Law and the Hong Kong Bill of Rights Ordinance safeguard the rights of individuals, including the right against racial discrimination. We also have obligation, under the International Convention on the Elimination of All Forms of Racial Discrimination, to prohibit and to eliminate racial discrimination."
  HKG_LGBT_rights: "LGBT Rights"
@@ -253,7 +253,7 @@
  HKG_enhance_crackdown_on_illegal_gambling: "Enhance crackdown on Illegal Gambling"
  HKG_intensify_efforts_to_combat_human_trafficking: "Intensify efforts to Combat Human Trafficking"
  HKG_combat_underground_prostitution: "Combat Underground Prostitution"
- HKG_arrest_leaders_of_triads: "Arrest the Leaders of the Triad"
+ HKG_tough_on_drug_trafficking: "Tough on Drug Trafficking"
  HKG_Gong_ou_police_jointly_arrest_triad_members: "Gong‘ou Police Jointly Arrest Triad Members"
  HKG_legco_decision_categories: "§1LegCo§!"
  legco_current_motion_clock: "Current Motion: §Y[ROOT.legco_current_motion]§!"
@@ -400,6 +400,9 @@
  HKG_triad_strength: "Triad's Strength"
  HKG_modify_triad_evidance_tt: "§YTriad's Criminal Evidence§! changes by [?HKG_modify_triad_evidance|+0] (Current: [?HKG.HKG_triad_evidance|Y0])\n"
  HKG_modify_triad_strength_tt: "§YTriad's Strength§! changes by [?HKG_modify_triad_strength|+0] (Current: [?HKG.HKG_triad_strength|Y0])\n"
+ HKG_triad_evidance_more_than_1_tt: "Have more than §G1§! of §YTriad's Criminal Evidence§! (Current: [?HKG.HKG_triad_evidance|Y0])\n"
+ HKG_triad_evidance_more_than_3_tt: "Have more than §G3§! of §YTriad's Criminal Evidence§! (Current: [?HKG.HKG_triad_evidance|Y0])\n"
+ HKG_strength_effect_police_raids_tt: "The Effect of §YDecision§! Search Suspected Triad Gatherings will be §Gstrengthen§!."
 
  #Event
  hongkong.8.t: "The Dragen Year"
