--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -2034,7 +2034,7 @@
  UKR_nationalists_cleane_ukraine: "The True Ukraine"
  UKR_nationalists_great_ukraine: "The Great Ukraine"
  UKR_nationalists_great_ukraine_desc: "Great Ukraine begins here!"
- UKR_nationalists_trizub: "Trizub"
+ UKR_nationalists_trizub: "Tryzub"
  UKR_nationalists_reconcista: "The Revived Reconquista"
  UKR_nationalists_reconcista_desc: "Ukraine will become a beacon of the revival of Christianity in Europe! The holy march from Kiev begins"
  ##########Tooltips##########
