turkic council fix

--- a/localisation/english/MD_focus_CES_l_english.yml
+++ b/localisation/english/MD_focus_CES_l_english.yml
@@ -1293,6 +1293,7 @@
  invitation_turkic_council_tt1: "\nWe will create a §CTurkic Council§!, and invite the following countries: §Y[AZE.GetNameWithFlag], [KYR.GetNameWithFlag], [TUR.GetNameWithFlag], [UZB.GetNameWithFlag]§!."
  invitation_turkic_council_tt2: "\nWe will create a §CTurkic Council§!, and invite the following countries: §Y[AZE.GetNameWithFlag], [KYR.GetNameWithFlag], [TUR.GetNameWithFlag], [KAZ.GetNameWithFlag]§!."
  invitation_turkic_council_tt3: "\nWe will create a §CTurkic Council§!, and invite the following countries: §Y[AZE.GetNameWithFlag], [KAZ.GetNameWithFlag], [TUR.GetNameWithFlag], [UZB.GetNameWithFlag]§!."
+ joining_turkic_council_tt1: "\nWe will join a §CTurkic Council§! to improve our relations with the rest of the Turkic countries."
  CES_partnership_with_unesco: "Partnership with UNESCO"
  CES_partnership_with_unesco_desc: "The partnership with UNESCO is a strategic cooperation with the United Nations Educational, Scientific, Cultural and Communication Organization to achieve common goals in these areas."
  CES_healthcare_reform: "Healthcare Reform"
