--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -307,14 +307,14 @@ l_english:
  AST_The_Labor_Party_desc: "The Australian Labor Party is the major center-left opposition party. The party balances progressive and centrist policies between its factions. The left faction is progressive and socially democratic, while the right faction is economically liberal and socially conservative."
  AST_Strengthen_the_Labor_right: "Strengthen the Labor Right"
  AST_Strengthen_the_Labor_right_desc: "Labor's Right focuses on economic growth, fiscal responsibility and market-friendly policies. Their policies prioritise budget surplus and debt reduction with more cautious climate policy and a more restrictive approach to immigration and border security. They strongly support the US alliance and close ties to Western allies."
- AST_Increase_the_power_of_the_Labor_left: "Increase the Power of the the Labor Left"
+ AST_Increase_the_power_of_the_Labor_left: "Increase the Power of the Labor Left"
  AST_Increase_the_power_of_the_Labor_left_desc: "Labor's Left is more progressive and social-democratic than the Right. The faction emphasises social justice, equality and the rights of marginalized groups. Their economic policy advocates for stronger government intervention to ensure fair distribution of wealth and resources. They support a more independent foreign policy that is less aligned with the United States."
  AST_influence_the_factions: "Influence the Factions"
  AST_influence_the_factions_desc: ""
  AST_Branch_Stacking: "Branch Stacking"
  AST_Branch_Stacking_desc: "To ensure the Labor Party's success in future elections, we should position loyal party members in branches where their votes can significantly impact the outcome of internal party elections in our favour. This will allow us to ensure that our preferred candidates are preselected for elections and ensure that our faction gains control over party decisions. The practice is considered unethical and risks increasing the country's political corruption."
  AST_Influence_the_Unions: "Influence the Unions"
- AST_Influence_the_Unions_desc: "The Labor Party has a long history with Australia's labor unions. The unions have large numbers of members that could benefit our cause monetarily and politically. Supporting the unions gives us legitimacy as representatives of the working-class's interests."
+ AST_Influence_the_Unions_desc: "The Labor Party has a long history with Australia's labour unions. The unions have large numbers of members that could benefit our cause monetarily and politically. Supporting the unions gives us legitimacy as representatives of the working-class's interests."
  AST_Use_the_faceless_men: "Use the Faceless Men"
  AST_Use_the_faceless_men_desc: "Senior party officials, faction leaders and union bosses exert substantial control over the party's internal processes. These men and women can make backroom deals to influence key decisions that affect the party's direction and leadership without input from the general public."
  AST_Push_Social_issues_into_the_party_platform: "Promote Social Issues"
