--- a/localisation/english/MD_focus_LBA_l_english.yml
+++ b/localisation/english/MD_focus_LBA_l_english.yml
@@ -216,7 +216,7 @@
  libya_build_rail_to_tunisia: "Connect Railroad To [TUN.GetNameWithFlag]"
  libya_build_rail_to_tunisia_desc: "Tunisia to our West is a very stable country and a hotspot of European tourism. If we connect by rail there, maybe some of tourists are more likely to visit us as well."
  libya_build_rail_to_tunisia_tt: "The cost of this project will be $§Y4.00§!.\n"
- libya_build_rail_to_tunisia_tt_2: "§RThe cost will be doubled because we have the idea §Y$LBA_libyan_gauge_railroads$§!§!\n"
+ libya_build_rail_to_tunisia_tt_2: "§RThe cost will be doubled because we have the national idea §Y$LBA_libyan_gauge_railroads$§!§!\n"
  libya_build_rail_to_egypt: "Connect Railroad To [EGY.GetNameWithFlag]"
  libya_build_rail_to_egypt_desc: "During World War 2, the Allies built a temporary railroad from Sollum in Egypt to Tobruk. The Libyan side of the railroad however was dismantled after Libyan independence. We should connect Tobruk again to Sollum to make accessing the Suez canal shipping easier."
  libya_build_rail_to_egypt_tt: "The cost of this project will be $§Y2.00§!.\n"
@@ -296,12 +296,12 @@
  LBA_empowered_revolutionary_committees: "Empowered Revolutionary Committees"
  LBA_empowered_revolutionary_committees_desc: "The Revolutionary Committees of Libya have taken full control over the political process of the country. While previously ensuring the People's Congresses didn't stray too far away ideologically, all decision making now essentially falls under the control of the Revolutionary Committees.\n\n§YThis idea will be removed if we are Salafist.§!"
  LBA_undeveloped_agriculture: "Undeveloped Agriculture"
- LBA_undeveloped_agriculture_desc: "Libya is a very arid country with only 2% of the land area being arable. Existing Islamic inheritance laws and Gaddafi's policies have left whatever farms there are as very small land holders. Only a small percentage of Libya's food needs are produced domestically and the great majority of food must be imported. This makes us very dependent on other countries. The largest exporters of food to Libya are §Y[BRA.GetNameWithFlag], [ITA.GetNameWithFlag], [EGY.GetNameWithFlag], [SWI.GetNameWithFlag], [SIA.GetNameWithFlag] and [UAE.GetNameWithFlag]§! and our ability to import food from them depends on their ability to export it.\n\n§YThis idea will be removed if one of the following countries is our subject or we own their capital: [SAF.GetNameWithFlag], [CDI.GetNameWithFlag], [MOR.GetNameWithFlag], [EGY.GetNameWithFlag] or [TNZ.GetNameWithFlag]."
+ LBA_undeveloped_agriculture_desc: "Libya is a very arid country with only 2% of the land area being arable. Existing Islamic inheritance laws and Gaddafi's policies have left whatever farms there are as very small land holders. Only a small percentage of Libya's food needs are produced domestically and the great majority of food must be imported. This makes us very dependent on other countries. The largest exporters of food to Libya are §Y[BRA.GetNameWithFlag], [ITA.GetNameWithFlag], [EGY.GetNameWithFlag], [SWI.GetNameWithFlag], [SIA.GetNameWithFlag] and [UAE.GetNameWithFlag]§! and our ability to import food from them depends on their ability to export it.\n\n§YThis idea will be removed if one of the following countries is our subject or we own their capital: [SAF.GetNameWithFlag], [CDI.GetNameWithFlag], [MOR.GetNameWithFlag], [EGY.GetNameWithFlag] or [TNZ.GetNameWithFlag].§!"
  LBA_undeveloped_agriculture_tt: "§RCan't have §YThe Farmers§! as an §YInternal Faction§!§!"
  LBA_agricultural_reform: "Agricultural Reform"
- LBA_agricultural_reform_desc: "The agricultural sector in Libya has been reformed. Private land occupation is now freer and Islamic inheritance law no longer splinters farms. With added fresh water sources from desalination and the GMMR, Libya has developed its agriculture to its maximum limit, considering their situation.\n\n§YThis idea will be removed if one of the following countries is our subject or we own their capital: [SAF.GetNameWithFlag], [CDI.GetNameWithFlag], [MOR.GetNameWithFlag], [EGY.GetNameWithFlag] or [TNZ.GetNameWithFlag]."
+ LBA_agricultural_reform_desc: "The agricultural sector in Libya has been reformed. Private land occupation is now freer and Islamic inheritance law no longer splinters farms. With added fresh water sources from desalination and the GMMR, Libya has developed its agriculture to its maximum limit, considering their situation.\n\n§YThis idea will be removed if one of the following countries is our subject or we own their capital: [SAF.GetNameWithFlag], [CDI.GetNameWithFlag], [MOR.GetNameWithFlag], [EGY.GetNameWithFlag] or [TNZ.GetNameWithFlag].§!"
  LBA_agricultural_imports: "Agricultural Imports"
- LBA_agricultural_imports_desc: "Libya has increased the amount of food imported to the country greatly. Since Libya has very little arable land, the government has built relations and supply chains for food imports rather than wasting time and money trying to fight a lost battle.\n\n§YThis idea will be removed if one of the following countries is our subject or we own their capital: [SAF.GetNameWithFlag], [CDI.GetNameWithFlag], [MOR.GetNameWithFlag], [EGY.GetNameWithFlag] or [TNZ.GetNameWithFlag]."
+ LBA_agricultural_imports_desc: "Libya has increased the amount of food imported to the country greatly. Since Libya has very little arable land, the government has built relations and supply chains for food imports rather than wasting time and money trying to fight a lost battle.\n\n§YThis idea will be removed if one of the following countries is our subject or we own their capital: [SAF.GetNameWithFlag], [CDI.GetNameWithFlag], [MOR.GetNameWithFlag], [EGY.GetNameWithFlag] or [TNZ.GetNameWithFlag].§!"
  LBA_great_man_made_river_phase2: "Great Man-Made River - Phase II"
  LBA_great_man_made_river_phase2_desc: "The Great Man-Made River (GMMR) is a network of water pipes bringing fresh water from the Nubian Sandstone Aquifer in the South of Libya to the coast. It is the largest underground network of water pipes in the whole world, and Muammar Gaddafi has dubbed it the 'Eight Wonder of the World'. Currently, it feeds the cities of Tripoli, Sirte and Benghazi, and water it provides is free to all Libyans. There have been plans to expand the network, but development has stalled since the 90s."
  LBA_great_man_made_river_phase3: "Great Man-Made River - Phase III"
@@ -430,7 +430,7 @@
  LBA_people_motivated_to_work: "People Motivated To Work"
  LBA_people_motivated_to_work_desc: "Gaddafi's latest trick of throwing money on the streets of Tripoli has motivated people that international aid agencies and charities are nothing but scams trying to get people hooked on money. They are now working extra hard to make sure they never have to beg for money again."
  LBA_people_unmotivated_to_work: "People Unmotivated To Work"
- LBA_people_unmotivated_to_work_desc: "Gaddafi's latest trick of throwing money on the streets of Tripoli has backfired severly. People no longer want to work, but instead are just sitting in their homes waiting for a handout."
+ LBA_people_unmotivated_to_work_desc: "Gaddafi's latest trick of throwing money on the streets of Tripoli has backfired severely. People no longer want to work, but instead are just sitting in their homes waiting for a handout."
  LBA_gaddafis_car_rocket: "The Rocket"
  LBA_gaddafis_car_rocket_desc: "Libya has launched mass production of a domestic car design; the Rocket. Shaped like a wedge, packed with air bags, run-flat tyres, auto-fuel cutoff, impact absorbent bumpers and many other safety features, the car has been dubbed (at least by Libya's rule Gaddafi) as the safest car in the world."
  LBA_gaddafis_car_bucket: "The Bucket"
@@ -591,7 +591,7 @@
  LBA_health_ministry_expert: "Health Ministry Expert"
  LBA_lessons_from_veterans: "Lessons From Veterans"
  LBA_university_thesis: "University Thesis"
- LBA_corporate_sponsor: "Corporate Sponsorhip"
+ LBA_corporate_sponsor: "Corporate Sponsorship"
 
  #Unit leader traits
  LBA_unit_leader_trait_tripolitania: "Tribal Affinity: Tripolitania"
@@ -654,7 +654,7 @@
  LBA_religious_education: "Religious Education"
  LBA_religious_education_desc: "Our schools should incorporate religious studies closely into their curriculum. People must learn of the Quran and Islamic practices right from their childhood."
  LBA_national_education: "Nationalist Education"
- LBA_national_education_desc: "Our schools should incorporate nationalist and civic studies closely into their curriculum. Patriotism and great deeds of Libyans must be thought to all citizens."
+ LBA_national_education_desc: "Our schools should incorporate nationalism and civic studies closely into their curriculum. Patriotism and great deeds of Libyans must be thought to all citizens."
  LBA_appoint_grand_mufti: "Appoint A Grand Mufti"
  LBA_appoint_grand_mufti_desc: "Libya has no Grand Mufti to interpret Islamic Law. This is shameful for a devout Islamic nation such as us. We should nominate Sadiq al-Ghariani to be the Grand Mufti."
  LBA_appoint_baathist_advisor: "Appoint A Ba'athist Adviser"
@@ -686,7 +686,7 @@
  LBA_de_westernisation: "De-Westernization"
  LBA_de_westernisation_desc: "The decadent West has too much influence in our country. We need to erode Western traditions in the country."
  LBA_grand_mufti_rule: "Grand Mufti Rule"
- LBA_grand_mufti_rule_desc: "The Grand Mufti has become an important symbol for our people. It is better if more political power is given to him to allow him ot guide Libya towards enlightenment."
+ LBA_grand_mufti_rule_desc: "The Grand Mufti has become an important symbol for our people. It is better if more political power is given to him to allow him to guide Libya towards enlightenment."
  LBA_denounce_green_book: "Denounce The Green Book"
  LBA_denounce_green_book_desc: "Gaddafi's Green Book mixed nationalism with Islam and was used as the basis for his rule. The only book the people should follow is the Quran, and nothing else."
  LBA_tanasoh_tv: "Tanasuh TV"
