--- a/localisation/english/MD_focus_LBA_l_english.yml
+++ b/localisation/english/MD_focus_LBA_l_english.yml
@@ -886,7 +886,7 @@
  LBA_new_trucks: "Motorization Drive"
  LBA_new_trucks_desc: "Our motorized units drive around in trucks or Toyota technicals, making our army look like a bunch of guerrillas. Modern armies have tank-like personnel vehicles, which we should also have."
  LBA_new_artillery: "Improved Fire Support"
- LBA_new_artillery_desc: "Any army is going to need a fire support element if it is going to be successful on the battlefied. We need to modernise our artillery corps."
+ LBA_new_artillery_desc: "Any army is going to need a fire support element if it is going to be successful on the battlefield. We need to modernise our artillery corps."
  LBA_local_supply_system: "Local Supply Systems"
  LBA_local_supply_system_desc: "Years of weapon sanctions showed us how easy it is to get cut out off supply lines for new equipment. To remedy this, we should expand our local production so spare parts and replacements are more easily available."
  LBA_expand_airbases: "Expand Airbases"
@@ -966,8 +966,8 @@
  LBA_gmmr_kufra_desc: "The desert city of Al-Jawf in the South of Libya in the Al-Kufrah district is one of the few towns in the area. It is sitting right on top of the Nubian Sand Aquifer. We should build a well there to increase the capacity of the GMMR."
  LBA_gmmr_ghadames: "GMMR Ghadames"
  LBA_gmmr_ghadames_desc: "In the West of the country near Ghadames, there is another aquifer we could utilise. If we add this area to the GMMR network, we will increase its capacity."
- LBA_gmmr_jaghboub: "GMMR Jaghboub"
- LBA_gmmr_jaghboub_desc: "In the East of the country, right on the border with Egypt, just south of Tobruk, there is a small town of Jaghboub. The area is a natural oasis sitting on top of an aquifer. By constructing a well here, we can bring fresh water to Tobruk."
+ LBA_gmmr_jaghbub: "GMMR Jaghbub"
+ LBA_gmmr_jaghbub_desc: "In the East of the country, right on the border with Egypt, just south of Tobruk, there is a small town of Jaghbub. The area is a natural oasis sitting on top of an aquifer. By constructing a well here, we can bring fresh water to Tobruk."
  LBA_western_mountain_power_plant: "Western Mountain Powerplant"
  LBA_western_mountain_power_plant_desc: "Libya only has one old powerplant in operation currently. We need to secure our electricity supply and build more powerplants near the capital. There are plans to build a cycle gas turbine plant near Al Garbi, and we should help fund it."
  LBA_gmmr_connect_east_west: "Finish GMMR"
