--- a/localisation/english/MD_focus_LBA_l_english.yml
+++ b/localisation/english/MD_focus_LBA_l_english.yml
@@ -1019,7 +1019,7 @@
  LBA_negotiations_with_un: "Negotiations With The UN"
  LBA_negotiations_with_un_desc: "As Libyan oil revenue began to increase in the 1970s, Gaddafi greatly increased his support for various rebel groups across the world. Libya was accused of several international terrorist attacks, including the La Belle bombing 1986, the Lockerbie bombing in 1988 and the downing if UTA Flight 772 in 1989. Eventually, Libya was put under extensive sanctions by the UN, which led to Libya handing over two of the Lockerbie suspects to Scottish authorities in 1999. The sanctions are still in place and we need to open a negotiation line to the UN to remove them."
  LBA_meeting_with_taliban: "Meet With The Taliban"
- LBA_meeting_with_taliban_desc: "The Taliban are bravely fighting against the Western colonial powers. We need to closen ties with them and help them in their struggle against the New World Order."
+ LBA_meeting_with_taliban_desc: "The Taliban are bravely fighting against the Western colonial powers. We need to close ties with them and help them in their struggle against the New World Order."
  LBA_assassinate_dissidents: "Assassinate Dissidents"
  LBA_assassinate_dissidents_desc: "Many Libyans living in exile openly campaign against our regime. This slander must be stopped and these people must be eliminated."
  LBA_meet_hezbollah: "Meet With Hezbollah"
@@ -2221,7 +2221,7 @@
  LibyaCivilWar.8.d: "The Libyan Royal Family in exile has started campaigning and collecting funds against Gaddafi. They have been touring around Europe, meeting with politicians, asking for NATO to intervene in the country to ensure the safety of the protestors. Many protestors have been seen waving flags of the old Kingdom of Libya, and carrying portraits of King Idris I."
  LibyaCivilWar.8.a: "They are nothing more than puppets of the West!"
  LibyaCivilWar.9.t: "Government Minister Resigns"
- LibyaCivilWar.9.d: "In protest against how the government is handling the protestors, one of our government ministers has resigned and decided to join the rebels."
+ LibyaCivilWar.9.d: "In protest against how the government is handling the protests, one of our government ministers has resigned and decided to join the rebels."
  LibyaCivilWar.9.a: "What?"
  LibyaCivilWar.10.t: "Foreign Ambassador Defects"
  LibyaCivilWar.10.d: "One of our ambassadors to a foreign country has resigned and defected to their host country. With them, they have taken some key government documents and secrets."
