--- a/localisation/english/MD_focus_LBA_l_english.yml
+++ b/localisation/english/MD_focus_LBA_l_english.yml
@@ -1122,7 +1122,7 @@
  LBA_utilise_toubou_tt: "If we declare war on §Y[CHA.GetNameWithFlag]§!, the Toubou people of §Y[TIE.GetNameWithFlag]§! will §Ydeclare independence§! and become a §Y$autonomy_puppet_state$§! of ours"
  LBA_suggest_joint_mining: "Suggest Joint Mining"
  LBA_suggest_joint_mining_desc: "If we combine our efforts with Chad, we will be able to extract great amount of uranium from the Aouzou strip, benefiting both countries."
- LBA_demand_aouzou: "Demand The Strip"
+ LBA_demand_aouzou: "Demand The Aouzou Strip"
  LBA_demand_aouzou_desc: "The time has come for Chad to relinquish control of the Aouzou strip to us. If they refuse, we will not make the same mistakes we did in the Toyota War."
  LBA_demand_aouzou_threat: "[LBA.GetNameDef] Demanded the Aouzou Strip"
  LBA_demand_chads_submission: "Demand Chad's Submission"
